2012-01-10  Tomoaki NISHIYAMA  <tomoakin@kenroku.asrc.kanazawa-u.ac.jp>

	Windows support for r-devel.
	Make libpq.a with ar directly from $(OBJ) not via dll.
	Thus, install.libs.R is no more required.

	* ChangeLog
	* DESCRIPTION
	* src/Makevars.win
	* src/install.libs.R: delete
	* src/libpq/Makefile.global.win64
	* src/libpq/Makefile.win
	* src/libpq/Makefile.shlib

2011-12-31  Tomoaki NISHIYAMA  <tomoakin@kenroku.asrc.kanazawa-u.ac.jp>

	Move conditionals from Makevars.in to configure.in and
	configure so that the GNU extension is not used.

	* ChangeLog
	* DESCRIPTION
	* configure
	* configure.in
	* src/Makevars.in

2011-12-29  Tomoaki NISHIYAMA  <tomoakin@kenroku.asrc.kanazawa-u.ac.jp>

	Prepare for release. As the last update makes many incompatibilities,
	the version number is large update.
	Remove dbBeginTransaction which is not defined in DBI.

	* ChangeLog
	* DESCRIPTION
	* NAMESPACE
	* R/PostgreSQL.R
	* inst/NEWS
	* man/dbCommit-methods.Rd 

2011-12-03  Tomoaki NISHIYAMA  <tomoakin@kenroku.asrc.kanazawa-u.ac.jp>

	Remove exported names that are not defined in DBI and may conflict other packages.
	Remove safe.write, which is not used anymore.
	Don't use make.db.names, which prevents using natural names.
	Move dbBuildTableDefinition to postgresqlBuildTableDefinition.
	Move isIdCurrent to isPostgresqlIdCurrent
	row.names be integer rather than charactor for sqldf compatibility.

	* NAMESPACE
	* R/PostgreSQL.R
	* R/PostgreSQLSupport.R
	* R/dbObjectId.R
	* man/safe.write.Rd
	* man/dbBuildTableDefinition.Rd
	* man/postgresqlBuildTableDefinition.Rd
	* man/make.db.names-methods.Rd
	* man/dbObjectId-class.Rd
	* man/isIdCurrent.Rd
	* man/isPostgresqlIdCurrent.Rd	
	* man/postgresqlSupport.Rd

2011-12-02  Tomoaki NISHIYAMA  <tomoakin@kenroku.asrc.kanazawa-u.ac.jp>

	Add clean: target to clean the libpq subdir on darwin
	
	* src/Makevars.in

2011-11-24  Tomoaki NISHIYAMA  <tomoakin@kenroku.asrc.kanazawa-u.ac.jp>
